kubernetes-ingress-hands-on/exercises/10-final-challenge/exercise/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-challenge
  namespace: ingress-lab
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30s"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: custom-404
      port:
        name: http
  tls:
    - hosts:
        - portal.final.ingress.local
        - api.final.ingress.local
      secretName: final-ingress-tls
  rules:
    - host: portal.final.ingress.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
    - host: api.final.ingress.local
      http:
        paths:
          - path: /quote
            pathType: Exact
            backend:
              service:
                name: quote-api
                port:
                  name: http
          - path: /questions
            pathType: Prefix
            backend:
              service:
                name: quiz-api
                port:
                  name: http
